Use blockchain code that limits poc GC

--- a/rebar.config
+++ b/rebar.config
@@ -9,8 +9,8 @@
 {cover_enabled, true}.
 
 {deps, [
-        {blockchain, {git, "https://github.com/helium/blockchain-core.git",
-                      {branch, "master"}}},
+        {blockchain, {git, "https://github.com/Jonzky/blockchain-core.git",
+                      {branch, "limit-poc-gc"}}},
         {sibyl, {git, "https://github.com/helium/sibyl.git",
                       {branch, "master"}}},
         {hbbft, {git, "https://github.com/helium/erlang-hbbft.git",
